--- a/PhenoPad/PhenoPad.csproj
+++ b/PhenoPad/PhenoPad.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>PhenoPad</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.15063.0</TargetPlatformVersion>
+    <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.16299.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.15063.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
@@ -138,7 +138,9 @@
     <Compile Include="PhenotypeService\PhenotypeManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpeechService\GoogleRecognize.cs" />
+    <Compile Include="SpeechService\SpeechEngineInterpreter.cs" />
     <Compile Include="SpeechService\SpeechManager.cs" />
+    <Compile Include="SpeechService\SpeechEngineJSON.cs" />
     <Compile Include="Styles\MyColors.cs" />
     <Compile Include="WebSocketService\SpeechStreamSocket.cs" />
   </ItemGroup>
