--- a/PhenoPad/PhenoPad.csproj
+++ b/PhenoPad/PhenoPad.csproj
@@ -21,7 +21,8 @@
     <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
     <AppxBundle>Always</AppxBundle>
     <AppxBundlePlatforms>x64</AppxBundlePlatforms>
-    <PackageCertificateThumbprint>32947871D5CA7DCC39914550D7C5EB72925F2D14</PackageCertificateThumbprint>
+    <PackageCertificateThumbprint>80F52011B650AFF265AC529BAEF1FE91DDD05F56</PackageCertificateThumbprint>
+    <AppxPackageDir>C:\Users\jingb\OneDrive\Desktop\PhenoPad\</AppxPackageDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
