--- a/PhenoPad/PhenoPad.csproj
+++ b/PhenoPad/PhenoPad.csproj
@@ -131,6 +131,7 @@
       <DependentUpon>PhenotypeDetail.xaml</DependentUpon>
     </Compile>
     <Compile Include="FileService\FileManager.cs" />
+    <Compile Include="FileService\FileServerClient.cs" />
     <Compile Include="FileService\Notebook.cs" />
     <Compile Include="FileService\ImageAndAnnotation.cs" />
     <Compile Include="FileService\NotePage.cs" />
@@ -279,6 +280,12 @@
     </PackageReference>
     <PackageReference Include="System.Interactive.Async">
       <Version>3.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="System.IO.Compression">
+      <Version>4.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.IO.Compression.ZipFile">
+      <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="System.Net.Http">
       <Version>4.3.3</Version>
