--- a/PhenoPad/PhenoPad.csproj
+++ b/PhenoPad/PhenoPad.csproj
@@ -174,6 +174,7 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <Content Include="Assets\checkmark.png" />
     <Content Include="Assets\written_notes.jpg" />
     <Content Include="conf\diagram.conf" />
     <Content Include="conf\en_US.conf" />
