--- a/PhenoPad/PhenoPad.csproj
+++ b/PhenoPad/PhenoPad.csproj
@@ -118,6 +118,12 @@
     <Compile Include="CustomControl\AddInControl.xaml.cs">
       <DependentUpon>AddInControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CustomControl\DiseaseControl.xaml.cs">
+      <DependentUpon>DiseaseControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="CustomControl\DiseaseDetailControl.xaml.cs">
+      <DependentUpon>DiseaseDetailControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="CustomControl\MyScriptTextEditor.xaml.cs">
       <DependentUpon>MyScriptTextEditor.xaml</DependentUpon>
     </Compile>
@@ -216,6 +222,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="CustomControl\DiseaseControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CustomControl\DiseaseDetailControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="CustomControl\MyScriptTextEditor.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -270,6 +284,12 @@
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.0.8</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Toolkit.Uwp">
+      <Version>2.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
+      <Version>2.2.0</Version>
     </PackageReference>
     <PackageReference Include="MyScript.InteractiveInk.Uwp">
       <Version>1.1.2</Version>
