--- a/PhenoPad/PhenoPad.csproj
+++ b/PhenoPad/PhenoPad.csproj
@@ -85,6 +85,8 @@
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>true</Prefer32Bit>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
+    <UseDotNetNativeToolchain>false</UseDotNetNativeToolchain>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
@@ -112,6 +114,7 @@
     <Compile Include="BrowsePage.xaml.cs">
       <DependentUpon>BrowsePage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ConfigService\ConfigService.cs" />
     <Compile Include="CustomControl\AddInImageControl.xaml.cs">
       <DependentUpon>AddInImageControl.xaml</DependentUpon>
     </Compile>
@@ -123,9 +126,6 @@
     </Compile>
     <Compile Include="CustomControl\DiseaseDetailControl.xaml.cs">
       <DependentUpon>DiseaseDetailControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="CustomControl\MyScriptTextEditor.xaml.cs">
-      <DependentUpon>MyScriptTextEditor.xaml</DependentUpon>
     </Compile>
     <Compile Include="CustomControl\NotePageControl.xaml.cs">
       <DependentUpon>NotePageControl.xaml</DependentUpon>
@@ -142,6 +142,9 @@
     <Compile Include="FileService\ImageAndAnnotation.cs" />
     <Compile Include="FileService\NotePage.cs" />
     <Compile Include="HWRService\HWRManager.cs" />
+    <Compile Include="LogService\FileLoggingSessionScenario.cs" />
+    <Compile Include="LogService\MetroLogger.cs" />
+    <Compile Include="LogService\LoggingScenarioEventArgs.cs" />
     <Compile Include="PageOverview.xaml.cs">
       <DependentUpon>PageOverview.xaml</DependentUpon>
     </Compile>
@@ -180,7 +183,10 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <Content Include="Assets\back.png" />
+    <Content Include="Assets\back_black.png" />
     <Content Include="Assets\checkmark.png" />
+    <Content Include="Assets\idea.png" />
     <Content Include="Assets\written_notes.jpg" />
     <Content Include="conf\diagram.conf" />
     <Content Include="conf\en_US.conf" />
@@ -190,7 +196,9 @@
   <ItemGroup>
     <Content Include="Assets\abc_print.png" />
     <Content Include="Assets\abc_write.png" />
-    <Content Include="Properties\Default.rd.xml" />
+    <Content Include="Properties\Default.rd.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
     <Content Include="Assets\Square150x150Logo.scale-200.png" />
@@ -227,10 +235,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="CustomControl\DiseaseDetailControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="CustomControl\MyScriptTextEditor.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -276,20 +280,11 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Accord.Video.FFMPEG">
-      <Version>3.8.0</Version>
-    </PackageReference>
-    <PackageReference Include="Accord.Video.FFMPEG.x64">
-      <Version>3.8.0</Version>
-    </PackageReference>
-    <PackageReference Include="AForge">
-      <Version>2.2.5</Version>
-    </PackageReference>
-    <PackageReference Include="AForge.Video">
-      <Version>2.2.5</Version>
-    </PackageReference>
     <PackageReference Include="log4net">
       <Version>2.0.8</Version>
+    </PackageReference>
+    <PackageReference Include="MetroLog">
+      <Version>1.0.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AspNet.WebApi.Client">
       <Version>5.2.4</Version>
@@ -302,9 +297,6 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
       <Version>2.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="MyScript.InteractiveInk.Uwp">
-      <Version>1.1.2</Version>
     </PackageReference>
     <PackageReference Include="NETStandard.Library">
       <Version>2.0.2</Version>
@@ -334,12 +326,7 @@
       <Version>1.11.0</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\UIReferenceImplementation\MyScript.InteractiveInk.UIReferenceImplementation.Uwp-VS2017.csproj">
-      <Project>{667892f3-1761-4ea9-bdfa-71944c768bad}</Project>
-      <Name>MyScript.InteractiveInk.UIReferenceImplementation.Uwp-VS2017</Name>
-    </ProjectReference>
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
