--- a/PhenoPad/PhenoPad.csproj
+++ b/PhenoPad/PhenoPad.csproj
@@ -331,6 +331,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>11.0.2</Version>
     </PackageReference>
+    <PackageReference Include="RtfDomParser">
+      <Version>1.0.0</Version>
+    </PackageReference>
     <PackageReference Include="System.Interactive.Async">
       <Version>3.1.1</Version>
     </PackageReference>
