--- a/PhenoPad/PhenoPad.csproj
+++ b/PhenoPad/PhenoPad.csproj
@@ -336,6 +336,9 @@
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
       <Version>2.2.0</Version>
     </PackageReference>
+    <PackageReference Include="NAudio">
+      <Version>1.8.5</Version>
+    </PackageReference>
     <PackageReference Include="NETStandard.Library">
       <Version>2.0.2</Version>
     </PackageReference>
