UI update + working on overview

--- a/PhenoPad/PhenoPad.csproj
+++ b/PhenoPad/PhenoPad.csproj
@@ -131,6 +131,9 @@
     <Compile Include="CustomControl\EHRPageControl.xaml.cs">
       <DependentUpon>EHRPageControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CustomControl\NoteLineViewControl.xaml.cs">
+      <DependentUpon>NoteLineViewControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="CustomControl\NotePageControl.xaml.cs">
       <DependentUpon>NotePageControl.xaml</DependentUpon>
     </Compile>
@@ -276,6 +279,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="CustomControl\EHRPageControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CustomControl\NoteLineViewControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
