bug fix & reorganizations

--- a/PhenoPad/PhenoPad.csproj
+++ b/PhenoPad/PhenoPad.csproj
@@ -109,7 +109,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="AppConfigurations.cs" />
-    <Compile Include="AudioCapturePermissions.cs" />
+    <Compile Include="SpeechService\AudioCapturePermissions.cs" />
     <Compile Include="BluetoothService\BluetoothService.cs" />
     <Compile Include="BrowsePage.xaml.cs">
       <DependentUpon>BrowsePage.xaml</DependentUpon>
@@ -138,17 +138,16 @@
       <DependentUpon>NotePageControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="CustomControl\NotePageControl_InkAnalysis.cs" />
-    <Compile Include="CustomControl\NotePageControl_Notetext.cs" />
-    <Compile Include="CustomControl\NotePhraseControl.xaml.cs">
+    <Compile Include="HWRService\NotePhraseControl.xaml.cs">
       <DependentUpon>NotePhraseControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="CustomControl\PhenotypeBriefControl.xaml.cs">
+    <Compile Include="PhenotypeService\PhenotypeBriefControl.xaml.cs">
       <DependentUpon>PhenotypeBriefControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="CustomControl\PhenotypeDetail.xaml.cs">
+    <Compile Include="PhenotypeService\PhenotypeDetail.xaml.cs">
       <DependentUpon>PhenotypeDetail.xaml</DependentUpon>
     </Compile>
-    <Compile Include="CustomControl\WordBlockControl.xaml.cs">
+    <Compile Include="HWRService\WordBlockControl.xaml.cs">
       <DependentUpon>WordBlockControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="FileService\AudioFile.cs" />
@@ -191,7 +190,7 @@
     <Compile Include="OverviewPage.xaml.cs">
       <DependentUpon>OverviewPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="CustomControl\PhenotypeControl.xaml.cs">
+    <Compile Include="PhenotypeService\PhenotypeControl.xaml.cs">
       <DependentUpon>PhenotypeControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainPage.xaml.cs">
@@ -292,19 +291,19 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="CustomControl\NotePhraseControl.xaml">
+    <Page Include="HWRService\NotePhraseControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="CustomControl\PhenotypeBriefControl.xaml">
+    <Page Include="PhenotypeService\PhenotypeBriefControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="CustomControl\PhenotypeDetail.xaml">
+    <Page Include="PhenotypeService\PhenotypeDetail.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="CustomControl\WordBlockControl.xaml">
+    <Page Include="HWRService\WordBlockControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -328,7 +327,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="CustomControl\PhenotypeControl.xaml">
+    <Page Include="PhenotypeService\PhenotypeControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
