Enable note editing from collected information.

--- a/PhenoPad/PhenoPad.csproj
+++ b/PhenoPad/PhenoPad.csproj
@@ -112,6 +112,7 @@
     <Compile Include="CustomControl\NoteEditPageControl.xaml.cs">
       <DependentUpon>NoteEditPageControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PhenotypeService\MedicalTerm.cs" />
     <Compile Include="PhenotypeService\PhenotypeBriefControl2.xaml.cs">
       <DependentUpon>PhenotypeBriefControl2.xaml</DependentUpon>
     </Compile>
@@ -235,10 +236,87 @@
     <Content Include="Assets\back_black.png" />
     <Content Include="Assets\checkmark.png" />
     <Content Include="Assets\idea.png" />
+    <Content Include="Assets\transcripts\.ipynb_checkpoints\2019_01_30_0-checkpoint.txt" />
+    <Content Include="Assets\transcripts\.ipynb_checkpoints\2019_03_20_1-checkpoint.txt" />
+    <Content Include="Assets\transcripts\.ipynb_checkpoints\2019_04_10_0-checkpoint.txt" />
+    <Content Include="Assets\transcripts\.ipynb_checkpoints\2019_04_25_0-checkpoint.txt" />
+    <Content Include="Assets\transcripts\.ipynb_checkpoints\2019_11_28_0-checkpoint.txt" />
+    <Content Include="Assets\transcripts\.ipynb_checkpoints\2019_12_05_0-checkpoint.txt" />
+    <Content Include="Assets\transcripts\.ipynb_checkpoints\2019_12_05_1-checkpoint.txt" />
+    <Content Include="Assets\transcripts\.ipynb_checkpoints\2020_03_04_0-checkpoint.txt" />
+    <Content Include="Assets\transcripts\.ipynb_checkpoints\2020_03_04_1-checkpoint.txt" />
+    <Content Include="Assets\transcripts\.ipynb_checkpoints\2020_03_04_2-checkpoint.txt" />
+    <Content Include="Assets\transcripts\.ipynb_checkpoints\2020_03_04_3-checkpoint.txt" />
+    <Content Include="Assets\transcripts\.ipynb_checkpoints\2020_03_04_4-checkpoint.txt" />
+    <Content Include="Assets\transcripts\.ipynb_checkpoints\2020_03_04_6-checkpoint.txt" />
+    <Content Include="Assets\transcripts\.ipynb_checkpoints\2020_03_04_8-checkpoint.txt" />
+    <Content Include="Assets\transcripts\.ipynb_checkpoints\2020_03_06_0-checkpoint.txt" />
+    <Content Include="Assets\transcripts\.ipynb_checkpoints\2020_03_06_1-checkpoint.txt" />
+    <Content Include="Assets\transcripts\.ipynb_checkpoints\2020_03_06_3-checkpoint.txt" />
+    <Content Include="Assets\transcripts\.ipynb_checkpoints\2020_03_06_6-checkpoint.txt" />
+    <Content Include="Assets\transcripts\.ipynb_checkpoints\2020_03_06_7-checkpoint.txt" />
+    <Content Include="Assets\transcripts\.ipynb_checkpoints\2020_03_06_8-checkpoint.txt" />
+    <Content Include="Assets\transcripts\2019_01_30_0.txt" />
+    <Content Include="Assets\transcripts\2019_03_20_1.txt" />
+    <Content Include="Assets\transcripts\2019_04_10_0.txt" />
+    <Content Include="Assets\transcripts\2019_04_25_0.txt" />
+    <Content Include="Assets\transcripts\2019_11_28_0.txt" />
+    <Content Include="Assets\transcripts\2019_12_05_0.txt" />
+    <Content Include="Assets\transcripts\2019_12_05_1.txt" />
+    <Content Include="Assets\transcripts\2020_03_04_0.txt" />
+    <Content Include="Assets\transcripts\2020_03_04_1.txt" />
+    <Content Include="Assets\transcripts\2020_03_04_2.txt" />
+    <Content Include="Assets\transcripts\2020_03_04_3.txt" />
+    <Content Include="Assets\transcripts\2020_03_04_4.txt" />
+    <Content Include="Assets\transcripts\2020_03_04_5.txt" />
+    <Content Include="Assets\transcripts\2020_03_04_6.txt" />
+    <Content Include="Assets\transcripts\2020_03_04_7.txt" />
+    <Content Include="Assets\transcripts\2020_03_04_8.txt" />
+    <Content Include="Assets\transcripts\2020_03_06_0.txt" />
+    <Content Include="Assets\transcripts\2020_03_06_1.txt" />
+    <Content Include="Assets\transcripts\2020_03_06_2.txt" />
+    <Content Include="Assets\transcripts\2020_03_06_3.txt" />
+    <Content Include="Assets\transcripts\2020_03_06_4.txt" />
+    <Content Include="Assets\transcripts\2020_03_06_5.txt" />
+    <Content Include="Assets\transcripts\2020_03_06_6.txt" />
+    <Content Include="Assets\transcripts\2020_03_06_7.txt" />
+    <Content Include="Assets\transcripts\2020_03_06_8.txt" />
+    <Content Include="Assets\transcripts_processed\.ipynb_checkpoints\2019_01_30_0-checkpoint.txt" />
+    <Content Include="Assets\transcripts_processed\2019_01_30_0.txt" />
+    <Content Include="Assets\transcripts_processed\2019_03_20_1.txt" />
+    <Content Include="Assets\transcripts_processed\2019_04_10_0.txt" />
+    <Content Include="Assets\transcripts_processed\2019_04_25_0.txt" />
+    <Content Include="Assets\transcripts_processed\2019_11_28_0.txt" />
+    <Content Include="Assets\transcripts_processed\2019_12_05_0.txt" />
+    <Content Include="Assets\transcripts_processed\2019_12_05_1.txt" />
+    <Content Include="Assets\transcripts_processed\2020_03_04_0.txt" />
+    <Content Include="Assets\transcripts_processed\2020_03_04_1.txt" />
+    <Content Include="Assets\transcripts_processed\2020_03_04_2.txt" />
+    <Content Include="Assets\transcripts_processed\2020_03_04_3.txt" />
+    <Content Include="Assets\transcripts_processed\2020_03_04_4.txt" />
+    <Content Include="Assets\transcripts_processed\2020_03_04_5.txt" />
+    <Content Include="Assets\transcripts_processed\2020_03_04_6.txt" />
+    <Content Include="Assets\transcripts_processed\2020_03_04_7.txt" />
+    <Content Include="Assets\transcripts_processed\2020_03_04_8.txt" />
+    <Content Include="Assets\transcripts_processed\2020_03_06_0.txt" />
+    <Content Include="Assets\transcripts_processed\2020_03_06_1.txt" />
+    <Content Include="Assets\transcripts_processed\2020_03_06_2.txt" />
+    <Content Include="Assets\transcripts_processed\2020_03_06_3.txt" />
+    <Content Include="Assets\transcripts_processed\2020_03_06_4.txt" />
+    <Content Include="Assets\transcripts_processed\2020_03_06_5.txt" />
+    <Content Include="Assets\transcripts_processed\2020_03_06_6.txt" />
+    <Content Include="Assets\transcripts_processed\2020_03_06_7.txt" />
+    <Content Include="Assets\transcripts_processed\2020_03_06_8.txt" />
     <Content Include="Assets\written_notes.jpg" />
     <Content Include="conf\diagram.conf" />
     <Content Include="conf\en_US.conf" />
     <Content Include="conf\math.conf" />
+    <None Include="Assets\transcripts_w_medical\.ipynb_checkpoints\2019_01_30_0-checkpoint.json" />
+    <None Include="Assets\transcripts_w_medical\2019_01_30_0.json" />
+    <None Include="Assets\transcripts_w_medical\2019_03_20_1.json" />
+    <None Include="Assets\transcripts_w_medical\2019_04_10_0.json" />
+    <None Include="Assets\transcripts_w_medical\2019_04_25_0.json" />
+    <None Include="Assets\transcripts_w_medical\2019_11_28_0.json" />
     <None Include="PhenoPad_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
